# 3d-city-loader

./: .gitignore  Cargo.toml  README.md  Trunk.toml  city_visualizer-5a01a39a8f5ba18f.js  city_visualizer-c450a16dc60d7871.js  index.html  post_build.sh  trunk.build.toml
.github/workflows/: continuous_deployment.yml  continuous_integration.yml
assets/: complex-tree-simple.glb
geocache/: example
src/: common.rs  crate.rs  fps.rs  lib.rs  lod.rs  main.rs  plugin.rs  ui.rs
src/data/: building_type.rs  geography.rs  loading.rs  mod.rs  query.rs  road_type.rs  traffic_graph.rs
src/earth/: agent.rs  assets.rs  buildings.rs  lakes.rs  mesh_builder.rs  mod.rs  rivers.rs  roads.rs  simplification.rs  terrain.rs  trajectory.rs
src/player/: mod.rs
