[package]
name = "city_visualizer"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
bevy = "0.13.0"
# Adds GUI
bevy_egui = "0.25"
earcutr = "0.4.3"
geo = "0.28.0"
rand = "0.8.5"
bevy_mod_reqwest = { version = "0.14.0" }
serde_json = "1.0.114"
strum = "0.26.2"
strum_macros = "0.26.2"
petgraph = "0.6.4"
noise = "0.9.0"
wasm-bindgen = "0.2.92"

[target.'cfg(target_arch = "wasm32")'.dependencies]
crossbeam-channel = "0.5.7"

[lib]
name = "city_visualizer"
path = "src/lib.rs"
